flask-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-app
  namespace: two-tier

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:

        - name: flask-app

          image: mandhar12/two-tier-flask-app:v1

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /
              port: 5000

            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 5000

            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
