mysql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mysql
  namespace: two-tier

spec:
  serviceName: mysql-service

  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:

        - name: mysql

          image: mysql:8.0

          ports:
            - containerPort: 3306

          volumeMounts:

            - name: mysql-storage
              mountPath: /var/lib/mysql

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"

            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"

            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

  volumeClaimTemplates:

    - metadata:
        name: mysql-storage

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: local-path

        resources:
          requests:
            storage: 5Gi
