flask-service.yml
apiVersion: v1
kind: Service

metadata:
  name: flask-service
  namespace: two-tier

spec:
  type: ClusterIP

  selector:
    app: flask-app

  ports:
    - port: 5000
      targetPort: 5000
