mysql-service.yml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: two-tier

spec:
  clusterIP: None

  selector:
    app: mysql

  ports:
  - port: 3306
